# nimbus-c2

./: .gitignore  ACKNOWLEDGMENTS.md  AUTHORS  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MIGRATION.md  NOTICE  PITCH.md  README.md  SECURITY.md  SPDX-HEADER.txt  STRATEGY.md  pyproject.toml  run_validation.py
.github/workflows/: ci.yml
benchmarks/: bench_milp.py
configs/: stage2b_conformal_validation.yaml
docs/: REFERENCES.md  REPRODUCIBILITY.md  STAGE2A_OPENSKY.md  hitl-research-basis.md  validation-roadmap.md
frontend/: index.html  saab-scenario-game.html  scenario1.html
scripts/: collect_opensky.py  repo_hygiene.py
src/nimbus_c2/: __init__.py  assurance.py  classifier.py  coa_generator.py  conformal.py  hungarian_tewa.py  milp_tewa.py  models.py  opensky_adapter.py  pipeline.py  scoring.py  sitrep.py  wave_forecaster.py
src/nimbus_c2/api/: __init__.py  app.py  demo_data.py
src/nimbus_c2/experiments/: __init__.py  config.py  provenance.py  result.py  runner.py
src/nimbus_c2/scenarios/: __init__.py
tests/: test_api.py  test_conformal.py  test_experiments.py  test_milp_determinism.py  test_milp_extensions.py  test_milp_parity.py  test_opensky_adapter.py  test_pipeline.py
